# nexa-thinking-framework

./: .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  LICENSE  Makefile  README.md
.github/workflows/: release.yml
backend/: agent_settings.json  app_settings.json  llm_settings.json  main.py  nexa-backend.spec  questions.json  requirements.txt
backend/app/: base_path.py
backend/app/models/: agents.py  chain_of_thought.py  vectors.py
backend/app/routes/: __init__.py  agents.py  canvas.py  chain_of_thought.py  chat.py  logs.py  presets.py  project.py  prompt_history.py  prompts.py  questions.py  researcher.py  settings.py  telemetry.py  vectors.py
backend/app/services/: agent_router.py  agent_settings.py  app_settings.py  canvas_agent.py  canvas_state.py  embedding_service.py  llm_proxy.py  llm_settings.py  logging_service.py  orchestrator.py  pm_orchestrator.py  presets_service.py  prompt_classifier.py  qdrant_service.py  question_manager.py  request_store.py  researcher_orchestrator.py  telemetry.py  web_search.py  websocket_manager.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src/components/: AgentsSettingsTab.css  AgentsSettingsTab.tsx  CanvasPanel.css  CanvasPanel.tsx  ChainOfThoughtViewer.tsx  Chat.tsx  ThemeToggle.css  (+33 more)
scripts/: build-backend-win.bat  clean-win.bat  desktop-build-win.bat  install-win.bat
(+18 files in other folders)
