[package]
name = "nexa-thinking-framework"
version = "1.0.0"
description = "AI Laboratory for prompt engineering, RAG and multi-agent orchestration"
authors = ["Nexa"]
license = "MIT"
repository = "https://github.com/NexaEthos/nexa-thinking-framework"
edition = "2024"
rust-version = "1.85"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
tauri = { version = "2.9.5", features = ["devtools"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-shell = "2.3.4"
tauri-plugin-process = "2.3.1"
tokio = { version = "1.49.0", features = ["process", "sync"] }
